# Traffic_Congestion

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  Traffic_Congestion_Paper.docx  commands.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ~$affic_Congestion_Paper.docx
app/: __init__.py  app.py
app/pages/: 1_📖_How_It_Works.py  2_📊_Model_Diagnostics.py  3_🌆_Cluster_Stories.py
notebooks/: 01_eda.py  Traffic_Congestion_Submission.ipynb  Traffic_Congestion_Submission_clean.ipynb
scripts/: __init__.py  download_data.py  make_centroids.py
src/: __init__.py  clustering.py  config.py  data_loader.py  feature_engineering.py  preprocessing.py  utils.py  visualization.py
tests/: __init__.py  conftest.py  test_clustering.py  test_feature_engineering.py  test_preprocessing.py  test_utils.py
